# url-shortener-api

./: .gitignore  README.md  devenv.nix  pyproject.toml  requirements.txt  shortener.db
app/: config.py  crud.py  db.py  main.py  models.py  schemas.py  utils.py
